# Unless explicitly stated otherwise all files in this repository are licensed
# under the 3-clause BSD style license (see LICENSE).
# This product includes software developed at Datadog (https://www.datadoghq.com/).
# Copyright 2019 Datadog, Inc.

[metadata]
name = apigentools
description = Tooling for generation of API clients using openapi-generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    openapi
    api
    client
    openapi-generator
author = Datadog
author_email = packages@datadoghq.com
url = https://github.com/DataDog/apigentools
license = BSD 3-clause
platforms = any
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
project_urls =
    Bug Tracker = https://github.com/DataDog/apigentools/issues
    Documentation = https://apigentools.readthedocs.io/en/latest/
    Source Code = https://github.com/DataDog/apigentools


[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    chevron==0.13.1
    click==7.1.1
    PyYAML==5.1
setup_requires =
    setuptools>=30.3.0
    setuptools_scm

[options.entry_points]
console_scripts =
    apigentools = apigentools.cli:cli
    container-apigentools = apigentools.cli:cli

[options.extras_require]
tests =
    flexmock>=0.10.4
    pytest>=5.2.4
    pytest-cov
    pytest-black

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = --black --cov=apigentools --cov-config .coveragerc --cov-report=term-missing

[flake8]
max-line-length = 120
extend-ignore = E203

[tool:black]
line-length = 120

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120
